--- a/src/app/shared/form/form.component.html
+++ b/src/app/shared/form/form.component.html
@@ -5,7 +5,7 @@
       <input
         type="text"
         class="form-control"
-        placeholder="Title"
+        placeholder="Name"
         formControlName="name"
       />
     </div>
