--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 <div class="container">
   <div class="d-flex justify-content-end mb-2">
-    <button class="btn btn-warning btn-lg">Add todo</button>
+    <button class="btn btn-warning btn-lg" (click)="showForm()">
+      Add todo
+    </button>
   </div>
   <div class="row">
     <div class="col-6">
