--- a/src/app/shared/form/form.component.html
+++ b/src/app/shared/form/form.component.html
@@ -1,16 +1,37 @@
-<form [formGroup]="todoForm" (ngSubmit)="onSave(todoForm.value)" novalidate>
-  <input type="text" class="form-control" formControlName="_id" />
-  <div class="form-group row">
-    <div class="col-sm-12">
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Name"
-        formControlName="name"
-      />
+<ng-container *ngIf="this.todosSvc.todoSelectedAction$ | async as todo">
+  <form name="todoForm" #todoForm="ngForm" (ngSubmit)="onSave(todoForm.value)">
+    <input type="text" class="form-control" name="_id" [(ngModel)]="todo._id" />
+    <div class="form-group row">
+      <div class="col-sm-12">
+        <input
+          type="text"
+          class="form-control"
+          name="name"
+          placeholder="Name"
+          [(ngModel)]="todo.name"
+        />
+      </div>
+      <div class="form-group row completed-check">
+        <div class="col-sm-2">&nbsp;</div>
+        <div class="col-sm-10">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="statusCheck"
+              name="completed"
+              [disabled]="!todo._id"
+              [(ngModel)]="todo.completed"
+            />
+            <label class="form-check-label" for="statusCheck">
+              Status
+            </label>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <button type="submit" class="btn btn-primary btn-lg btn-block mb-2">
-    Save
-  </button>
-</form>
+    <button type="submit" class="btn btn-primary btn-lg btn-block mb-2">
+      Save
+    </button>
+  </form>
+</ng-container>
